# cynic

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-ci.yml
cynic/: analyzer.py  cli.py  prompts.py
cynic/db/: models.py
cynic/web/: main.py
cynic/web/static/: hall-of-fame.html  hall-of-fame.js  index.html  script.js  style.css
detecteur_moquerie/: analyzer.py  cli.py  prompts.py
tests/: test_analyzer.py
